# hollyphant

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build-sfos-package-docker.sh  build-sfos-package.sh  build.yml  package.yml
lib/: CMakeLists.txt  hollyphant.cpp  main-shim.cpp
lib/hollyphant/: hollyphant.h  main.h
lib/include/hollyphant/: main.h  statusitem.h
lib/rust/: Cargo.toml
lib/rust/hollyphant/: .env  .gitignore  Cargo.toml
lib/rust/hollyphant-dispatch/: Cargo.toml
lib/rust/hollyphant-dispatch/src/: lib.rs  request.rs  response.rs
lib/rust/hollyphant-ffi/: Cargo.toml  build.rs
lib/rust/hollyphant-ffi/src/: lib.rs
lib/rust/hollyphant/migrations/2025-01-24-01_accounts/: up.sql
lib/rust/hollyphant/src/: account.rs  db.rs  errors.rs  lib.rs  schema.rs
lib/rust/hollyphant/src/rest/: mastodon.rs
lib/src/: errorformatter.cpp  errorformatter.h  loggingeventprocessor.cpp  loggingeventprocessor.h  statusitem.cpp
lib/src/rust/: main.cpp  rusterrorformatter.cpp  rusterrorformatter.h  rusteventpublisher.cpp  rusteventpublisher.h  rusteventpublisherimpl.h
lib/src/shim/: main.cpp
rpm/: harbour-hollyphant.changes.in  harbour-hollyphant.changes.run.in  harbour-hollyphant.spec  harbour-hollyphant.yaml
