[package]
name = "hollyphant-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0"
env_logger = "0.11"
hollyphant = { path = "../hollyphant" }
hollyphant-dispatch = { path = "../hollyphant-dispatch" }
reqwest = "0.12"
tokio = { version = "1.43", features = ["rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["tracing-log"] }

[build-dependencies]
copy_dir = "0.1"
cxx-build = "1.0"

[lib]
crate-type=["staticlib"]
