[package]
name = "hollyphant"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "=2.1", default-features = false, features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
diesel_migrations = "=2.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"